[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
parking_lot = "0.12"
thiserror = "1.0"
tokio = { version = "1.28.0", default-features = false, features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

domain = { path = "../domain" }
