[package]
name = "connectivity"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
parking_lot = "0.12"
thiserror = "1.0"
tokio = { version = "1.28.0", default-features = false, features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }


[dev-dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
