[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
smartstring = "1.0"
paste = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
lazy_static = "1.4"
once_cell = "1.8"

[dev-dependencies]
